# gfjz

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
backend/app/: main.py  middleware.py  plugins.py  routers.py  schemas.py  services.py  settings.py
backend/tests/app/: test_main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Plugins.tsx
